stuck on how to handle md editor. might go back to html...

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>CureDystoniaNow</title>
     <base href="/">
+    <meta charset="utf-8"/>
   </head>
   <body>
     <div id="application"></div>
