payment integration with stripe. needs a lot of cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>CureDystoniaNow</title>
     <base href="/">
     <meta charset="utf-8"/>
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <div id="application"></div>
